--- a/database/.gitignore
+++ b/database/.gitignore
@@ -45,3 +45,6 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+includes/conf/auth.php
+/includes/conf/general_parameters.php
+/includes/conf/db.php
